[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "topology-mcp"
version = "1.0.0"
description = "Mathematical topology MCP server — surfaces, manifolds, and invariants mapped to aesthetic parameter space"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
topology-mcp = "topology_mcp.server:mcp.run"
